[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 436.0
margin_top = 230.0
margin_right = 587.0
margin_bottom = 370.0

[node name="Level1Button" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 151.0
margin_bottom = 20.0
text = "Load Level 1"

[node name="MorgunButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 151.0
margin_bottom = 44.0
text = "Load Morgun's Scene"

[node name="DonaldoButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 151.0
margin_bottom = 68.0
text = "Load Donaldo's Scene"

[node name="SavonButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 151.0
margin_bottom = 92.0
text = "Load Savon's Scene"

[node name="Back to Menu" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 151.0
margin_bottom = 116.0
text = "Back to Menu"

[node name="Quit" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 151.0
margin_bottom = 140.0
text = "Quit"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Level1Button" to="." method="_on_Level1Button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/MorgunButton" to="." method="_on_MorgunButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/DonaldoButton" to="." method="_on_DonaldoButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/SavonButton" to="." method="_on_SavonButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Back to Menu" to="." method="_on_Back_to_Menu_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
